[project]
name = "pi-oracle"
version = "0.1.0"
description = "Tamper-Evident AI Oracle for Financial Markets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Pi Oracle Team"}
]
keywords = ["blockchain", "oracle", "machine-learning", "cryptography", "merkle-tree", "raspberry-pi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Minimal core - only what's absolutely needed
    
    # Cryptography (for Merkle trees & signing)
    "pycryptodome>=3.18.0,<4.0.0",
    
    # Blockchain (lightweight)
    "web3>=6.0.0,<7.0.0",
    "eth-account>=0.9.0,<1.0.0",
    
    # Async runtime
    "aiohttp>=3.9.0,<4.0.0",
    
    # Config
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
# Optional: Add only when you need them
ml = [
    # Lightweight ML - only add when implementing detection
    "scikit-learn>=1.3.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
]

api = [
    # API server - only if exposing verification endpoint
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.23.0,<1.0.0",
]

data = [
    # Market data - only when connecting to exchanges
    "websockets>=11.0,<13.0",
    "requests>=2.31.0,<3.0.0",
]

dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_oracle"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

