# Cargo.toml

[package]
name = "pi-oracle-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pi_oracle_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
pyo3 = { version = "0.21", features = ["extension-module"] }